# calib

./: README.md  mkdocs.yml  pyproject.toml  ruff.toml
docs/: mkdocs.yml
docs/src/: index.md
src/calib/: __init__.py
src/calib/cli/: app.py  calibrate.py
src/calib/core/: camcalib.py  img.py  inout.py  signal.py
