[project]
name = "calib"
version = "0.1.0"
description = "WaveCams calibration tool"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    'ruff',
    'typer',
    'opencv-python-headless',
    'numpy',
    'matplotlib'
]

[dependency-groups]
    doc = [
        'mkdocs',
        'mkdocs-material',
        'mkdocstrings[python]',
        'mkdocs-gen-files',
        'mkdocs-literate-nav',
        'mkdocs-section-index'
    ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[project.scripts]
calib = "calib.cli.app:app"